<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nicotinaestudio.forestamovil.HomeActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_registro_transportista"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/activity_registro_transportista_title"/>
    
    <item
        android:id="@+id/action_registro_transporte"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/activity_registro_transportes_title"/>
    
    <item
        android:id="@+id/action_remisiones"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/activity_remisiones_title"/>

</menu>
